[gd_scene load_steps=8 format=3 uid="uid://dnitacts7ssfh"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_17pct"]
[ext_resource type="PackedScene" uid="uid://dic4krsgbv40j" path="res://mons/magnetfrog.tscn" id="2_y8jyx"]
[ext_resource type="Texture2D" uid="uid://d2s8352y246sk" path="res://assets/gui/pause_menu/teams.png" id="3_aqfyb"]
[ext_resource type="Texture2D" uid="uid://d0jglt7x7dj1l" path="res://assets/gui/pause_menu/quicksave.png" id="4_j4s6e"]
[ext_resource type="Texture2D" uid="uid://cq1hu7fu7t2rr" path="res://assets/gui/pause_menu/database.png" id="5_3360p"]
[ext_resource type="Texture2D" uid="uid://0t71fst2jhec" path="res://assets/gui/pause_menu/inventory.png" id="6_6lwjq"]
[ext_resource type="Texture2D" uid="uid://b57lfslou1vjy" path="res://assets/gui/pause_menu/settings.png" id="7_v8k3p"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17pct")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0784314, 0.105882, 1)

[node name="Mons" type="Node" parent="."]

[node name="MONPLACEHOLDER1" parent="Mons" instance=ExtResource("2_y8jyx")]
position = Vector2(64, 40)

[node name="MONPLACEHOLDER2" parent="Mons" instance=ExtResource("2_y8jyx")]
position = Vector2(128, 40)

[node name="MONPLACEHOLDER3" parent="Mons" instance=ExtResource("2_y8jyx")]
position = Vector2(192, 40)

[node name="MONPLACEHOLDER4" parent="Mons" instance=ExtResource("2_y8jyx")]
position = Vector2(256, 40)

[node name="TeamsButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 85.0
offset_right = 107.0
offset_bottom = 121.0
texture_normal = ExtResource("3_aqfyb")

[node name="QuicksaveButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 134.0
offset_right = 107.0
offset_bottom = 170.0
texture_normal = ExtResource("4_j4s6e")

[node name="DatabaseButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 111.0
offset_right = 206.0
offset_bottom = 147.0
texture_normal = ExtResource("5_3360p")

[node name="InventoryButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 86.0
offset_right = 306.0
offset_bottom = 122.0
texture_normal = ExtResource("6_6lwjq")

[node name="SettingsButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 134.0
offset_right = 306.0
offset_bottom = 170.0
texture_normal = ExtResource("7_v8k3p")

[connection signal="button_down" from="TeamsButton2" to="." method="_on_teams_button_pressed"]
[connection signal="button_down" from="QuicksaveButton2" to="." method="_on_quicksave_button_pressed"]
[connection signal="button_down" from="DatabaseButton2" to="." method="_on_database_button_pressed"]
[connection signal="button_down" from="InventoryButton2" to="." method="_on_inventory_button_pressed"]
[connection signal="button_down" from="SettingsButton2" to="." method="_on_settings_button_pressed"]
